# minidag

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: data_types.hpp  exam_search.cc  example_conf.json  loader.hpp  operators.hpp
include/: mini_dag.hpp
python/: pyproject.toml
python/minidag/: __init__.py  client.py
server/: minidag_server.cc
tests/: minidag_test.cc
